--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,13 +24,10 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
         
-        <h3>DOWNLOAD PDF OF MY RESUME</h3>
-        <a href="/assets/IsabellaLawsonResume.pdf" download>
-          <img src="/assets/pdficon.png" alt="PDF" width="104" height="142">
-        </a>
-          
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-
+        <p><strong>{{ site.description | default: site.github.project_tagline }}</p></strong>
+        
+        <li><a href="/assets/IsabellaLawsonResume.pdf" download>Download <strong>PDF</strong></a></li>
+        <li><a href="/assets/IsabellaLawsonResume.pdf" download><img src="/assets/pdficon.png" alt="PDF" width="50" height="50"></a></li>
 <!--  {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %} % --> 
