--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,8 @@
         
         <p><strong>{{ site.description | default: site.github.project_tagline }}</p></strong>
         
-        <li><a href="/assets/IsabellaLawsonResume.pdf" download>Download <strong>PDF</strong></a></li>
-        <li><a href="/assets/IsabellaLawsonResume.pdf" download><img src="/assets/pdficon.png" alt="PDF" width="50" height="50"></a></li>
+        <h3><a href="/assets/IsabellaLawsonResume.pdf" download>Download <strong>PDF</strong> of my resume</a><a href="/assets/IsabellaLawsonResume.pdf" download><img src="/assets/pdficon.png" alt="PDF" width="50" height="50"></a></h3>
+        
 <!--  {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %} % --> 
