--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         <p><strong>{{ site.description | default: site.github.project_tagline }}</p></strong>
         
         <h3><a href="/assets/IsabellaLawsonResume.pdf" download>Download <strong>PDF</strong> of my resume</a>
-        <p><a href="/assets/IsabellaLawsonResume.pdf" download><img src="/assets/pdficon.png" alt="PDF" width="50" height="50"></a></p></h3>
+        <br><a href="/assets/IsabellaLawsonResume.pdf" download><img src="/assets/pdficon.png" alt="PDF" width="50" height="50"></a></h3>
         
 <!--  {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
