--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,10 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
         
-        <p><strong>{{ site.description | default: site.github.project_tagline }}</p></strong>
+        <h2><strong>{{ site.description | default: site.github.project_tagline }}</h2></strong>
         
-        <h3><a href="/assets/IsabellaLawsonResume.pdf" download>Download <strong>PDF</strong> of my resume</a>
-        <br><a href="/assets/IsabellaLawsonResume.pdf" download><img src="/assets/pdficon.png" alt="PDF" width="50" height="50"></a></h3>
+        <h2><a href="/assets/IsabellaLawsonResume.pdf" download>Download a<strong>PDF</strong> of my resume</a>
+        <br><a href="/assets/IsabellaLawsonResume.pdf" download><img src="/assets/pdficon.png" alt="PDF" width="50" height="50"></a></h2>
         
 <!--  {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
