--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         <h2><strong>{{ site.description | default: site.github.project_tagline }}</h2></strong>
         
         <h3><a href="/assets/IsabellaLawsonResume.pdf" download>Download a PDF of my resume</a>
-        <a href="/assets/IsabellaLawsonResume.pdf" download><img src="/assets/pdficon.png" alt="PDF" width="25"></a></h3>
+        <a href="/assets/IsabellaLawsonResume.pdf" download><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /></a></h3>
         
 <!--  {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
