--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <h2><strong>{{ site.description | default: site.github.project_tagline }}</h2></strong>
         
         <h3><a href="/assets/IsabellaLawsonResume.pdf" download>Download a PDF of my resume</a>
-        <a href="/assets/IsabellaLawsonResume.pdf" download><span class="material-symbols-outlined">picture_as_pdf</span></a></h3>
+        <a href="/assets/IsabellaLawsonResume.pdf" download><span class="material-icons-outlined md-24">picture_as_pdf</span></a></h3>
         
 <!--  {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
