--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <header style="background-color:#E2E8F6;color:black;">
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
