--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
     {% include head-custom.html %}
   </head>
   <body>
-    <div class="wrapper">
-      <header style="background-color:#E2E8F6;color:black;">
+    <div style="background-color:#E2E8F6;color:black;" class="wrapper">
+      <header>
         <h1><a href="{{ "/" | absolute_url }}" style="color:black;">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
