--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     {% include head-custom.html %}
   </head>
   <body>
-    <div style="background-color:#E2E8F6;color:black;" class="wrapper">
+    <div style="background-color:#E2E8F6;color:black;padding:2em;" class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}" style="color:black;">{{ site.title | default: site.github.repository_name }}</a></h1>
 
