--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
     <![endif]-->
     {% include head-custom.html %}
   </head>
-  <body>
-    <div style="background-color:#E2E8F6;color:black;padding:2em;font-family:'Nunito';" class="wrapper">
+  <body style="background-color:#E2E8F6;">
+    <div style="background-color:#E2E8F6;color:black;font-family:'Nunito';" class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}" style="color:black;">{{ site.title | default: site.github.repository_name }}</a></h1>
 
