--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   <body style="background-color:#E2E8F6;">
     <div style="background-color:#E2E8F6;color:black;font-family:'Nunito';" class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}" style="color:black;">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1 style="font-weight:775;"><a href="{{ "/" | absolute_url }}" style="color:black;">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
