--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         <h1 style="font-weight:775;"><a href="{{ "/" | absolute_url }}" style="color:black;">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" style="margin:10vh;"/>
+          <img src="{{site.logo | relative_url}}" alt="Logo" style="width:4vh;margin:10vh;"/>
         {% endif %}
         
         <h2><strong>{{ site.description | default: site.github.project_tagline }}</h2></strong>
