--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,10 @@
   <body style="background-color:#E2E8F6;">
     <div style="background-color:#E2E8F6;color:black;font-family:'Nunito';" class="wrapper">
       <header>
-        <h1 style="font-weight:775;"><a href="{{ "/" | absolute_url }}" style="color:black;">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1 style="font-weight:775;margin: 0 0 10px;line-height: 1.5;"><a href="{{ "/" | absolute_url }}" style="color:black;">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" style="width:15vh;"/>
+          <img src="{{site.logo | relative_url}}" alt="Logo" style="width:17.5vh;"/>
         {% endif %}
         
         <h2><strong>{{ site.description | default: site.github.project_tagline }}</h2></strong>
